--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "node clean-folders.js",
     "test": "npx playwright test",
     "test-ui": "npx playwright test --ui",
     "smoke": "npx playwright test --grep \"@smoke\"",
     "regression": "npx playwright test --grep \"@regression\"",
-    "report": "allure generate allure-results --clean -o allure-report && npx allure open allure-report",
-    "clean": "rmdir /s /q allure-results && rmdir /s /q allure-report && rmdir /s /q playwright-report && rmdir /s /q test-results"
-
+    "report": "node generate-allure-meta.js && allure generate allure-results --clean -o allure-report && npx allure open allure-report",
+    "clean": "node clean-folders.js"
   },
   "keywords": [],
   "author": "",
