--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "smoke": "npx playwright test --grep \"@smoke\"",
     "regression": "npx playwright test --grep \"@regression\"",
     "report": "node generate-allure-meta.js && allure generate allure-results --clean -o allure-report && npx allure open allure-report",
-    "clean": "node clean-folders.js"
+    "clean": "node clean-folders.js",
+    "report:ci": "node generate-allure-meta.js && allure generate allure-results --clean -o allure-report"
   },
   "keywords": [],
   "author": "",
