--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint": "^9.35.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "cheerio": "^1.1.2"
   }
 }
