--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.3.3",
     "eslint": "^9.35.0",
+    "netlify-cli": "^23.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
