--- a/Application.json
+++ b/Application.json
@@ -3,16 +3,13 @@
     "baseUrl": "https://qa.ovac.dev.councilbox.com/admin",
     "users": {
       "admin": {
-        "username": "admin_dev",
-        "password": "pass_dev"
+        "username": "admin_dev"
       },
       "adminProfessional": {
-        "username": "ammar.micijevic@councilbox.com",
-        "password": "ammarAmmarTest123!1"
+        "username": "ammar.micijevic@councilbox.com"
       },
       "superadmin": {
-        "username": "ammar.micijevic+superadmin@councilbox.com",
-        "password": "ammarAmmarTest123!1"
+        "username": "ammar.micijevic+superadmin@councilbox.com"
       }
     }
   },
@@ -20,16 +17,13 @@
     "baseUrl": "https://qa.ovac.pre.councilbox.com/admin",
     "users": {
       "admin": {
-        "username": "admin_staging",
-        "password": "pass_staging"
+        "username": "admin_staging"
       },
       "adminProfessional": {
-        "username": "ammar.micijevic@councilbox.com",
-        "password": "ammarAmmarTest123!1"
+        "username": "ammar.micijevic@councilbox.com"
       },
       "superadmin": {
-        "username": "ammar.micijevic+superadmin@councilbox.com",
-        "password": "ammarAmmarTest123!1"
+        "username": "ammar.micijevic+superadmin@councilbox.com"
       }
     }
   },
@@ -37,16 +31,13 @@
     "baseUrl": "https://qa.ovac.councilbox.com/admin",
     "users": {
       "admin": {
-        "username": "admin_prod",
-        "password": "pass_prod"
+        "username": "admin_prod"
       },
       "adminProfessional": {
-        "username": "prof_prod",
-        "password": "pass_prod"
+        "username": "prof_prod"
       },
       "superadmin": {
-        "username": "muhamed.adzamija@councilbox.com",
-        "password": "Hamastowin123!"
+        "username": "muhamed.adzamija@councilbox.com"
       }
     }
   }
