--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^8.43.0",
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^3.3.3",
+    "dotenv": "^17.3.1",
     "eslint": "^9.35.0",
     "netlify-cli": "^23.5.1",
     "ts-node": "^10.9.2",
